--- a/Main/package.json
+++ b/Main/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "develop": "nodemon server.js",
     "seed": "node seeds/seed.js"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.29.3"
   },
   "devDependencies": {
